--- a/index.html
+++ b/index.html
@@ -18,9 +18,7 @@
 </head>
 <body>
 
-  <app>
-    ..Loading
-  </app>
+  test from satanworker
 
   <!-- Commmon files to be cached -->
   <script src="build/common.js"></script>
