basic html view

--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
 </head>
 <body>
 
-  test from satanworker
+  <div class="grid">
+
+  </div>
+
+
 
   <!-- Commmon files to be cached -->
   <script src="build/common.js"></script>
